--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="sketch.js" defer></script>
     <title>Snow - P5.js</title>
 </head>
-<body id="nightsky">
+<body style="overflow: hidden; margin: 0;">
     
-    <script src="sketch.js"></script>
 </body>
 </html>
